--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,53 @@
 {{ define "main" }}
 
+<!-- compteurs -->
+<section class="section-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 small-post-border">
+        <article class="media">
+          <div class="media-body">
+            <div class="mb-3 post-meta">
+              <i class="ti-direction h3 text-success"></i>
+              <p class="h4 text-success">0 kms parcourus</p>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="col-lg-3 small-post-border">
+        <article class="media">
+          <div class="media-body">
+            <div class="mb-3 post-meta">
+              <i class="ti-world h3 text-info"></i>
+              <p class="h4 text-info">1 pays traversés</p>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="col-lg-3 small-post-border">
+        <article class="media">
+          <div class="media-body">
+            <div class="mb-3 post-meta">
+              <i class="ti-face-sad h3 text-warning"></i>
+              <p class="h4 text-warning">0 indigestions</p>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="col-lg-3 small-post-border">
+        <article class="media">
+          <div class="media-body">
+            <div class="mb-3 post-meta">
+              <i class="ti-face-sad h3 text-danger"></i>
+              <p class="h4 text-danger">0 chutes</p>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- featured post -->
 <section class="section-sm">
   <div class="container">
