--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
         <article class="media">
           <div class="media-body">
             <div class="mb-3 post-meta">
-              <i class="ti-direction h3 text-success"></i>
+              <i class="fa-solid fa-signs-post h3 text-success"></i>
               <p class="h4 text-success">0 kms parcourus</p>
             </div>
           </div>
@@ -18,8 +18,8 @@
         <article class="media">
           <div class="media-body">
             <div class="mb-3 post-meta">
-              <i class="ti-world h3 text-info"></i>
-              <p class="h4 text-info">1 pays traversés</p>
+              <i class="fa-solid fa-map h3 text-info"></i>
+              <p class="h4 text-info">0 pays traversés</p>
             </div>
           </div>
         </article>
@@ -28,7 +28,7 @@
         <article class="media">
           <div class="media-body">
             <div class="mb-3 post-meta">
-              <i class="ti-face-sad h3 text-warning"></i>
+              <i class="fa-solid fa-tired h3 text-warning"></i>
               <p class="h4 text-warning">0 indigestions</p>
             </div>
           </div>
@@ -38,7 +38,7 @@
         <article class="media">
           <div class="media-body">
             <div class="mb-3 post-meta">
-              <i class="ti-face-sad h3 text-danger"></i>
+              <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
               <p class="h4 text-danger">0 chutes</p>
             </div>
           </div>
