--- a/layouts/index.html
+++ b/layouts/index.html
@@ -104,7 +104,7 @@
               {{ end }}
             </div>
             <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
-            <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>
+            <a href="{{ .Permalink }}" class="btn btn-outline-primary">lire plus</a>
           </div>
         </article>
       </div>
