--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -99,7 +99,7 @@
 {{ if site.Params.cookies.enable }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
 <div id="js-cookie-box" class="cookie-box cookie-box-hide">
-	This site uses cookies. By continuing to use this website, you agree to their use. <span id="js-cookie-button" class="btn btn-sm btn-primary ml-2">I Accept</span>
+	Ce site utilise des cookies. En continuant votre nagiation, vous autorisez leur utilisation. <span id="js-cookie-button" class="btn btn-sm btn-primary ml-2">J'accepte</span>
 </div>
 <script>
 	(function ($) {
