--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,46 +3,50 @@
 <!-- compteurs -->
 <section class="section-sm">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-3 small-post-border">
-        <article class="media">
-          <div class="media-body">
-            <div class="mb-3 post-meta">
-              <i class="fa-solid fa-signs-post h3 text-success"></i>
-              <p class="h4 text-success">0 kms parcourus</p>
-            </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-12 text-center">
+        <div class="row">
+          <div class="col-lg-3 small-post-border">
+            <article class="media">
+              <div class="media-body">
+                <div class="mb-3 post-meta">
+                  <i class="fa-solid fa-signs-post h3 text-success"></i>
+                  <p class="h4 text-success">0 kms parcourus</p>
+                </div>
+              </div>
+            </article>
           </div>
-        </article>
-      </div>
-      <div class="col-lg-3 small-post-border">
-        <article class="media">
-          <div class="media-body">
-            <div class="mb-3 post-meta">
-              <i class="fa-solid fa-map h3 text-info"></i>
-              <p class="h4 text-info">0 pays traversés</p>
-            </div>
+          <div class="col-lg-3 small-post-border">
+            <article class="media">
+              <div class="media-body">
+                <div class="mb-3 post-meta">
+                  <i class="fa-solid fa-map h3 text-info"></i>
+                  <p class="h4 text-info">0 pays traversés</p>
+                </div>
+              </div>
+            </article>
           </div>
-        </article>
-      </div>
-      <div class="col-lg-3 small-post-border">
-        <article class="media">
-          <div class="media-body">
-            <div class="mb-3 post-meta">
-              <i class="fa-solid fa-tired h3 text-warning"></i>
-              <p class="h4 text-warning">0 indigestions</p>
-            </div>
+          <div class="col-lg-3 small-post-border">
+            <article class="media">
+              <div class="media-body">
+                <div class="mb-3 post-meta">
+                  <i class="fa-solid fa-tired h3 text-warning"></i>
+                  <p class="h4 text-warning">0 indigestions</p>
+                </div>
+              </div>
+            </article>
           </div>
-        </article>
-      </div>
-      <div class="col-lg-3 small-post-border">
-        <article class="media">
-          <div class="media-body">
-            <div class="mb-3 post-meta">
-              <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
-              <p class="h4 text-danger">0 chutes</p>
-            </div>
+          <div class="col-lg-3 small-post-border">
+            <article class="media">
+              <div class="media-body">
+                <div class="mb-3 post-meta">
+                  <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
+                  <p class="h4 text-danger">0 chutes</p>
+                </div>
+              </div>
+            </article>
           </div>
-        </article>
+        </div>
       </div>
     </div>
   </div>
