--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -41,6 +41,8 @@
           <li class="mb-3"><a class="text-dark" href="mailto:{{ .Site.Params.email }}"><i
                 class="ti-email mr-3 text-primary"></i>{{ .Site.Params.email }}</a>
           {{ end }}
+          <li class="mb-3"><a class="text-dark" href="https://www.instagram.com/lesfrerotsavelo"/><i
+                class="ti-instagram mr-3 text-primary"></i>lesfrerotsavelo</a>
           </li>
         </ul>
       </div>
