--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,7 +20,7 @@
 </section>
 {{ end }}
 
-<footer class="text-capitalize">
+<footer>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 text-center mb-5">
