--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,8 +25,7 @@
   <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
   <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
 
-  {{ "<!-- google analitycs -->" | safeHTML }}
-  <!-- Google tag (gtag.js) -->
+  {{ "<!-- Google tag (gtag.js) -->" | safeHTML }}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.googleAnalyticsID }}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
