elev gain counter

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,14 +4,24 @@
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-15 text-center">
         <div class="row">
           <div class="col-lg-3 small-post-border">
             <article class="media">
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-signs-post h3 text-success"></i>
-                  <p class="h4 text-success">110.18 kms parcourus</p>
+                  <p class="h4 text-success">110.18km parcourus</p>
+                </div>
+              </div>
+	    </article>
+	  </div>
+          <div class="col-lg-3 small-post-border">
+            <article class="media">
+              <div class="media-body">
+                <div class="mb-3 post-meta">
+                  <i class="fa-solid fa-mountain-sun h3 text-success"></i>
+                  <p class="h4 text-success">1250m de denivelé positif</p>
                 </div>
               </div>
             </article>
@@ -34,14 +44,14 @@
                   <p class="h4 text-warning">0 indigestions</p>
                 </div>
               </div>
-            </article>
-          </div>
+	    </article>
+	  </div>
           <div class="col-lg-3 small-post-border">
             <article class="media">
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
-                  <p class="h4 text-danger">2 chutes</p>
+                  <p class="h4 text-danger">0 chute</p>
                 </div>
               </div>
             </article>
