--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-signs-post h3 text-success"></i>
-                  <p class="h4 text-success">563.92km parcourus</p>
+                  <p class="h4 text-success">622.44km parcourus</p>
                 </div>
               </div>
 	    </article>
@@ -21,7 +21,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-mountain-sun h3 text-success"></i>
-                  <p class="h4 text-success">4707m de denivelé positif</p>
+                  <p class="h4 text-success">5676m de denivelé positif</p>
                 </div>
               </div>
             </article>
@@ -41,7 +41,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-tired h3 text-warning"></i>
-                  <p class="h4 text-warning">1 indigestions</p>
+                  <p class="h4 text-warning">1 indigestion</p>
                 </div>
               </div>
 	    </article>
@@ -51,7 +51,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
-                  <p class="h4 text-danger">0 chute</p>
+                  <p class="h4 text-danger">1 chute</p>
                 </div>
               </div>
             </article>
