--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-signs-post h3 text-success"></i>
-                  <p class="h4 text-success">726.99km parcourus</p>
+                  <p class="h4 text-success">778.39km parcourus</p>
                 </div>
               </div>
 	    </article>
@@ -21,7 +21,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-mountain-sun h3 text-success"></i>
-                  <p class="h4 text-success">6021m de denivelé positif</p>
+                  <p class="h4 text-success">6245m de denivelé positif</p>
                 </div>
               </div>
             </article>
@@ -51,7 +51,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
-                  <p class="h4 text-danger">1 chute</p>
+                  <p class="h4 text-danger">3 chutes</p>
                 </div>
               </div>
             </article>
