--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-signs-post h3 text-success"></i>
-                  <p class="h4 text-success">2789.12km parcourus</p>
+                  <p class="h4 text-success">2888.41km parcourus</p>
                 </div>
               </div>
 	    </article>
@@ -21,7 +21,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-mountain-sun h3 text-success"></i>
-                  <p class="h4 text-success">23458m de denivelé positif</p>
+                  <p class="h4 text-success">23899m de denivelé positif</p>
                 </div>
               </div>
             </article>
@@ -51,7 +51,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
-                  <p class="h4 text-danger">9 chutes</p>
+		       <p class="h4 text-danger">11 chutes</p><!--5 chutes nath, 3 chutes nico, 3 chutes moi-->
                 </div>
               </div>
             </article>
