--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-signs-post h3 text-success"></i>
-                  <p class="h4 text-success">4841km parcourus</p>
+                  <p class="h4 text-success">4885km parcourus</p>
                 </div>
               </div>
 	    </article>
@@ -21,7 +21,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-mountain-sun h3 text-success"></i>
-                  <p class="h4 text-success">40656m de denivelé positif</p>
+                  <p class="h4 text-success">40933m de denivelé positif</p>
                 </div>
               </div>
             </article>
@@ -51,7 +51,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
-		       <p class="h4 text-danger">13 chutes</p><!--5 nath, 5 nico, 3 moi-->
+		       <p class="h4 text-danger">14 chutes</p><!--6 nico, 5 nath, 3 moi-->
                 </div>
               </div>
             </article>
