--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-signs-post h3 text-success"></i>
-                  <p class="h4 text-success">6441km parcourus</p>
+                  <p class="h4 text-success">6526km parcourus</p>
                 </div>
               </div>
 	    </article>
@@ -21,7 +21,7 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-mountain-sun h3 text-success"></i>
-                  <p class="h4 text-success">53534m de denivelé positif</p>
+                  <p class="h4 text-success">53662m de denivelé positif</p>
                 </div>
               </div>
             </article>
@@ -41,15 +41,15 @@
               <div class="media-body">
                 <div class="mb-3 post-meta">
                   <i class="fa-solid fa-tired h3 text-warning"></i>
-                  <p class="h4 text-warning">1 indigestion</p>
+		       <p class="h4 text-warning">5 maladies</p><!--2 nico, 2 nath, 1 moi-->
                 </div>
               </div>
 	    </article>
 	  </div>
           <div class="col-lg-3 small-post-border">
             <article class="media">
-              <div class="media-body">
-                <div class="mb-3 post-meta">
+		    <div class="media-body">
+			    <div class="mb-3 post-meta">
                   <i class="fa-solid fa-person-falling-burst h3 text-danger"></i>
 		       <p class="h4 text-danger">16 chutes</p><!--7 nico, 6 nath, 3 moi-->
                 </div>
